cabal-version: 2.4
name:          beam-keyed-migrate
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
author:        Ken Micklas
category:      Database
build-type:    Simple

library
  exposed-modules:  Database.Beam.Keyed.Migrate
  build-depends:
    , base
    , beam-core
    , beam-keyed
    , beam-migrate
    , text

  hs-source-dirs:   src
  default-language: Haskell2010
